# b17

./: .gitignore  README.md  pyproject.toml
src/b17/: __init__.py  b17.py  b17_imp.py  convert_mat.py  wrap.py
src/b17/data/: KNtable.nc  PNtable.nc  ktable.nc
src/test/: test_b17.py
